# sql-analysis

./: .gitignore  README.md  main.py  pyproject.toml
analysis/: business_analytics_views.sql  clean_rides_03.sql  cleaning_logic_02.sql  data_inspection_01.sql  extraction.py  insights_questions.sql  x.py  xxx.csv
